# hostupd

./: CMakeLists.txt  README.md  hostupd.conf.example
src/: cfgfile.cpp  cfgfile.h  database.cpp  database.h  main.cpp  ping.cpp  ping.h
